--- a/translations/kangyur/placeholders/077-003_toh362-kalacakra.xml
+++ b/translations/kangyur/placeholders/077-003_toh362-kalacakra.xml
@@ -15,14 +15,15 @@
                 <title type="otherTitle" xml:lang="zh">時輪金剛</title>
                 <title type="otherTitle" xml:lang="bo">མཆོག་གི་དང་པོའི་སངས་རྒྱས་ལས་ཕྱུང་བ་རྒྱུད་ཀྱི་རྒྱལ་པོ་དཔལ་དུས་ཀྱི་འཁོར་ལོ་ཞེས་བྱ་བ།</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">mchog gi dang po'i sangs rgyas las phyung ba rgyud kyi rgyal po dpal dus kyi 'khor lo zhes bya ba/</title>
-                <author role="translatorMain" ref="contributors.xml#team-55"/>
-                <author role="translatorEng" ref="contributors.xml#person-76">Wiesiek Mical</author>
+                <author role="translatorMain" xml:id="UT22084-077-003-1"/>
+                <author role="translatorEng" xml:id="UT22084-077-003-2">Wiesiek Mical</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-077-003"/>
                 <date/>
             </publicationStmt>
@@ -30,13 +31,13 @@
                 <bibl key="toh362" type="text">
                     <ref>Toh 362</ref>
                     <biblScope>vol.77, ff.22r-128v(pp.44-256)</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
-                    <author role="translatorTib" ref="eft:entity-17651" xml:lang="Sa-Ltn">Somanātha</author>
-                    <author role="translatorTib" ref="eft:entity-17535" xml:lang="Bo-Ltn">bod kyi lo tsA ba 'bro dge slong shes rab grags</author>
-                    <editor role="reviser" ref="eft:entity-17522" xml:lang="Bo-Ltn">dge slong shong ston</editor>
-                    <editor role="reviser" ref="eft:entity-17695" xml:lang="Bo-Ltn">dge slong tshul khrims dar</editor>
-                    <editor role="reviser" ref="eft:entity-17696" xml:lang="Bo-Ltn">mkhas pa chen po zhang ston mdo sde dpal</editor>
-                    <editor role="reviser" ref="eft:entity-17514" xml:lang="Sa-Ltn">Śākyaśrībhadra</editor>
+                    <author xml:lang="en" xml:id="UT22084-077-003-3">Anon</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT22084-077-003-4">Somanātha</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT22084-077-003-5">bod kyi lo tsA ba 'bro dge slong shes rab grags</author>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT22084-077-003-6">dge slong shong ston</editor>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT22084-077-003-7">dge slong tshul khrims dar</editor>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT22084-077-003-8">mkhas pa chen po zhang ston mdo sde dpal</editor>
+                    <editor role="reviser" xml:lang="Sa-Ltn" xml:id="UT22084-077-003-9">Śākyaśrībhadra</editor>
                     <location work="UT4CZ5369" count-pages="213">
                         <volume number="77" start-page="44" end-page="256"/>
                     </location>
@@ -46,13 +47,13 @@
                 <bibl key="toh1346" type="text">
                     <ref>Toh 1346</ref>
                     <biblScope>ff. 1v-107v</biblScope>
-                    <author ref="eft:entity-17509" xml:lang="en">Anon</author>
-                    <author role="translatorTib" ref="eft:entity-17651" xml:lang="Sa-Ltn">Somanātha</author>
-                    <author role="translatorTib" ref="eft:entity-17535" xml:lang="Bo-Ltn">bod kyi lo tsA ba 'bro dge slong shes rab grags</author>
-                    <editor role="reviser" ref="eft:entity-17522" xml:lang="Bo-Ltn">dge slong shong ston</editor>
-                    <editor role="reviser" ref="eft:entity-17695" xml:lang="Bo-Ltn">dge slong tshul khrims dar</editor>
-                    <editor role="reviser" ref="eft:entity-17696" xml:lang="Bo-Ltn">mkhas pa chen po zhang ston mdo sde dpal</editor>
-                    <editor role="reviser" ref="eft:entity-17514" xml:lang="Sa-Ltn">Śākyaśrībhadra</editor>
+                    <author xml:lang="en" xml:id="UT22084-077-003-10">Anon</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT22084-077-003-11">Somanātha</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT22084-077-003-12">bod kyi lo tsA ba 'bro dge slong shes rab grags</author>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT22084-077-003-13">dge slong shong ston</editor>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT22084-077-003-14">dge slong tshul khrims dar</editor>
+                    <editor role="reviser" xml:lang="Bo-Ltn" xml:id="UT22084-077-003-15">mkhas pa chen po zhang ston mdo sde dpal</editor>
+                    <editor role="reviser" xml:lang="Sa-Ltn" xml:id="UT22084-077-003-16">Śākyaśrībhadra</editor>
                     <location work="UT23703" count-pages="212">
                         <volume number="11" start-page="2" end-page="213"/>
                     </location>
@@ -60,17 +61,39 @@
                     <idno source-id="O1JC76301JC7881" work="W23703"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-19T17:06:10.835Z" user="admin">19/11/2021 17:06:10</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:45:05.673Z" user="admin">0.0.2</note>
-                <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:45:05.673Z" user="admin"/>
-                <note type="updated" update="translation-status" value="3" date-time="2020-11-10T08:35:04.501Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-10T08:35:04.501Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2020-11-10T08:35:34.374Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2020-11-10T08:37:23.914Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2021-10-22T11:02:41.894Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1346-1400_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2020-08-19T10:45:05.673Z" type="text-version" status="0.0.2" xml:id="UT22084-077-003-17">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#admin" when="2020-08-19T10:45:05.673Z" type="publication-date" xml:id="UT22084-077-003-18">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2020-11-10T08:35:04.501Z" type="translation-status" status="3" xml:id="UT22084-077-003-19">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-10T08:35:04.501Z" type="text-version" status="0.0.3" xml:id="UT22084-077-003-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-10T08:35:34.374Z" type="text-version" status="0.0.4" xml:id="UT22084-077-003-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-10T08:37:23.914Z" type="text-version" status="0.0.5" xml:id="UT22084-077-003-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-22T11:02:41.894Z" type="text-version" status="0.0.6" xml:id="UT22084-077-003-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2021-11-02T12:58:22.645Z" type="import" xml:id="UT22084-077-003-24" source="tengyur-data-1346-1400_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-077-003-25">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#john" when="2023-09-15T17:28:19.968Z" type="text-version" status="0.0.9" xml:id="UT22084-077-003-26">
+                    <desc>Added notes of alt Tibetan translation in Lhasa Kangyur.</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
