--- a/translations/kangyur/translations/071-011_toh297-multitude_of_constituents.xml
+++ b/translations/kangyur/translations/071-011_toh297-multitude_of_constituents.xml
@@ -39,7 +39,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -48,7 +48,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -202,6 +202,12 @@
                 </change>
                 <change who="#andre" when="2023-08-26T09:58:53.373Z" type="text-version" status="1.0.3" xml:id="UT22084-071-011-212">
                     <desc>Glossary integration revised - activated in CG (again)</desc>
+                </change>
+                <change who="#sameer" when="2023-09-16T11:55:51.886Z" type="translation-status" status="1" xml:id="UT22084-071-011-213">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-09-16T11:55:51.886Z" type="text-version" status="1.0.4" xml:id="UT22084-071-011-214">
+                    <desc>Included in App v 3.6</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
