--- a/translations/kangyur/translations/090-003_toh559-the_great_peahen_queen_of_incantations.xml
+++ b/translations/kangyur/translations/090-003_toh559-the_great_peahen_queen_of_incantations.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-003-1844">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -115,6 +115,12 @@
                 <change who="#martina-cotter" when="2023-08-10T23:43:58.351Z" type="text-version" status="1.0.0" xml:id="UT22084-090-003-1855">
                     <desc>First published version</desc>
                 </change>
+                <change who="#sameer" when="2023-09-17T02:31:01.568Z" type="translation-status" status="1" xml:id="UT22084-090-003-1856">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T02:31:01.568Z" type="text-version" status="1.0.1" xml:id="UT22084-090-003-1857">
+                    <desc>Included in App v 3.6</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -154,7 +160,6 @@
                 <milestone unit="chunk" xml:id="UT22084-090-003-3"/>
                 <p tid="5">The translation was completed under the patronage and supervision of
                     84000: Translating the Words of the Buddha.</p>
-                <milestone unit="chunk" xml:id="UT22084-090-003-4"/>
             </div>
             <div type="introduction">
                 <head type="introduction" tid="8">Introduction</head>
