--- a/translations/kangyur/translations/090-006_toh562-the_sutra_of_great_cool_grove.xml
+++ b/translations/kangyur/translations/090-006_toh562-the_sutra_of_great_cool_grove.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-006-465">Rory Lindsay</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.2 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -39,7 +39,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -142,6 +142,12 @@
                 </change>
                 <change who="#andre" when="2023-08-23T10:18:08.635Z" type="text-version" status="1.0.2" xml:id="UT22084-090-006-470">
                     <desc>Glossary matching revised - activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:17:00.636Z" type="translation-status" status="1" xml:id="UT22084-090-006-471">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:17:00.636Z" type="text-version" status="1.0.3" xml:id="UT22084-090-006-472">
+                    <desc>Included in App v 3.6</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
