--- a/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -26,7 +26,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -35,7 +35,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -203,6 +203,12 @@
                 </change>
                 <change who="#andre" when="2023-08-26T10:08:05.141Z" type="text-version" status="1.0.1" xml:id="UT23703-113-010-252">
                     <desc>Glossary integration revised - activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:22:00.829Z" type="translation-status" status="1" xml:id="UT23703-113-010-253">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:22:00.829Z" type="text-version" status="1.0.2" xml:id="UT23703-113-010-254">
+                    <desc>Included in App v 3.6</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
