--- a/translations/kangyur/translations/076-008_toh354-teaching_the_causes_and_results_of_good_and_ill.xml
+++ b/translations/kangyur/translations/076-008_toh354-teaching_the_causes_and_results_of_good_and_ill.xml
@@ -27,14 +27,14 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-076-008-343">Andre Rodrigues</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to
                     translate all the Buddha’s words into modern languages, and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is
@@ -162,6 +162,12 @@
                 </change>
                 <change who="#andre" when="2023-08-26T09:53:17.082Z" type="text-version" status="1.0.3" xml:id="UT22084-076-008-351">
                     <desc>Glossary integration revised - activated in CG (again)</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:24:23.897Z" type="translation-status" status="1" xml:id="UT22084-076-008-352">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:24:23.897Z" type="text-version" status="1.0.4" xml:id="UT22084-076-008-353">
+                    <desc>Included in App v 3.6</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
