--- a/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
+++ b/translations/kangyur/translations/087-011_toh505a,1059a-mantra_for_incanting_medicines.xml
@@ -22,7 +22,7 @@
                                         Gu</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -31,7 +31,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -193,6 +193,12 @@
                 </change>
                 <change who="#andre" when="2023-08-26T09:48:08.986Z" type="text-version" status="1.0.5" xml:id="UT22084-087-011-106">
                     <desc>Glossary integration revised - activated in CG (again)</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:54:19.225Z" type="translation-status" status="1" xml:id="UT22084-087-011-107">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:54:19.225Z" type="text-version" status="1.0.6" xml:id="UT22084-087-011-108">
+                    <desc>Included in App v 3.5</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
