--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -41,7 +41,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.9 <date>2023</date>
+                <edition>v 1.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -50,7 +50,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -214,6 +214,12 @@
                 </change>
                 <change who="#celso" when="2023-09-11T20:04:16.889Z" type="text-version" status="1.0.9" xml:id="UT22084-089-012-4148">
                     <desc>added a missed &lt;lg&gt; that I caught in a global search</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:57:52.046Z" type="translation-status" status="1" xml:id="UT22084-089-012-4149">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-09-17T09:57:52.046Z" type="text-version" status="1.0.10" xml:id="UT22084-089-012-4150">
+                    <desc>Included in App v 3.5</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
