--- a/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -36,7 +36,7 @@
         <sponsor xml:id="UT22084-050-003-33122">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.10 <date>2023</date>
+                <edition>v 1.2.11 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -214,6 +214,9 @@
                 </change>
                 <change who="#sameer" when="2023-09-17T09:47:07.214Z" type="text-version" status="1.2.10" xml:id="UT22084-050-003-33217">
                     <desc>Included in App v 3.5</desc>
+                </change>
+                <change who="#sameer" when="2023-09-18T04:40:05.938Z" type="text-version" status="1.2.11" xml:id="UT22084-050-003-33218">
+                    <desc>Added 42 new glossary entries and removed two notes.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -3738,7 +3741,7 @@
             there is from the good activity of my body, speech, and mind, I dedicate it all to the
             highest, most complete enlightenment. May I not reach enlightenment in this afflicted
             buddha realm. Prince Avalokiteśvara will attain the complete enlightenment of perfect
-            buddhahood in the realm Sarvaratnasaṃnicaya<note place="end" xml:id="UT22084-050-003-607"> Literally “An Accumulation of All Jewels.”</note> while
+            buddhahood in the realm Sarvaratnasaṃnicaya while
             seated under a Bodhi tree that is adorned with an array of many jewels and will become
             the Tathāgata Saman­taraśmya­bhyudgataśrīkūṭa­rāja. I shall request him to teach the
             Dharma. I will practice the conduct of a bodhisattva for as long as that tathāgata
@@ -7948,8 +7951,7 @@
             at death, who are engaged in bad roots, and who are in despair within the wilderness of
             saṃsāra. The bhagavat buddhas who reside, live, and remain in the various, countless,
             innumerable worlds in the ten directions sent their emissaries to convey their
-            congratulations and gave him the name Mahā­karuṇā­vairocana­saumya.<note place="end" xml:id="UT22084-050-003-1339"> Literally “The Peaceful Illumination of Great
-              Compassion.”</note> My kalyāṇamitra and benefactor, the bodhisattva mahāsattva
+            congratulations and gave him the name Mahā­karuṇā­vairocana­saumya. My kalyāṇamitra and benefactor, the bodhisattva mahāsattva
             Mahā­karuṇā­vairocana­saumya, is now in the world realm Aṅguṣṭhā, where not long ago he
             attained complete enlightenment among the thumb-sized people. Being a cubit in height
             among those thumb-sized people, that tathāgata has turned the Dharma wheel that
