--- a/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
+++ b/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-090-009-33">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.16 <date>2023</date>
+                <edition>v 0.0.17 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-009"/>
                 <date/>
             </publicationStmt>
@@ -107,6 +107,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-08T08:07:07.245Z" type="text-version" status="0.0.16" xml:id="UT22084-090-009-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2023-09-18T09:30:58.732Z" type="translation-status" status="2.a" xml:id="UT22084-090-009-37">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#sameer" when="2023-09-18T09:30:58.732Z" type="text-version" status="0.0.17" xml:id="UT22084-090-009-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
