--- a/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
+++ b/translations/kangyur/placeholders/090-010_toh566-the_seven_hundred_practices_of_marici_from_the_tantras.xml
@@ -17,12 +17,12 @@
                 <editor role="projectEditor" xml:id="UT22084-090-010-32">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2023</date>
+                <edition>v 0.0.16 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-090-010"/>
                 <date/>
             </publicationStmt>
@@ -103,6 +103,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-08T08:09:18.103Z" type="text-version" status="0.0.15" xml:id="UT22084-090-010-35">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2023-09-18T09:31:45.99Z" type="translation-status" status="2.a" xml:id="UT22084-090-010-36">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#sameer" when="2023-09-18T09:31:45.99Z" type="text-version" status="0.0.16" xml:id="UT22084-090-010-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
