--- a/translations/kangyur/translations/092-001_toh686-the_sovereign_ritual_of_amoghapasa.xml
+++ b/translations/kangyur/translations/092-001_toh686-the_sovereign_ritual_of_amoghapasa.xml
@@ -32,7 +32,7 @@
                                 <sponsor xml:id="UT22084-092-001-7235">Sun Ping, Tian Xingwen, and Sun Fanglin</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.10 <date>2023</date>
+                <edition>v 1.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -211,6 +211,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-02T01:36:37.438Z" type="text-version" status="1.0.10" xml:id="UT22084-092-001-7274">
                     <desc>Removed initial &lt;p&gt; elements that only contain folio references.</desc>
+                </change>
+                <change who="#celso" when="2023-09-19T15:14:16.763Z" type="text-version" status="1.0.11" xml:id="UT22084-092-001-7275">
+                    <desc>minor typo</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -24114,8 +24117,8 @@
                         <gloss type="term" xml:id="UT22084-092-001-5494">
                             <term type="translationMain">four castes</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">caturvarṇa</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rigs bzhi </term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རིགས་བཞི །</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rigs bzhi</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རིགས་བཞི།</term>
                             <note type="definition">
                                 <p>The four main castes of Indic society: brahmin, kṣatriya, vaiśya, and
                                                                 śūdra.</p>
@@ -24863,7 +24866,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀླུ།</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="2" status="verified">na ga</term>
                             <term xml:lang="bo" type="attestedSource" n="2" status="verified">ན་ག</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A class of snake-like beings.</p>
                             </note>
                         </gloss>
@@ -25157,7 +25160,7 @@
                                         <item>
                         <gloss type="term" xml:id="UT22084-092-001-5652">
                             <term type="translationMain">samaya</term>
-                            <term type="translationAlternative">samaya bond </term>
+                            <term type="translationAlternative">samaya bond</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">samaya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dam tshig</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དམ་ཚིག</term>
@@ -26179,7 +26182,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཚངས་པ།</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="2" status="verified">brah+ma</term>
                             <term xml:lang="bo" type="attestedSource" n="2" status="verified">བྲཧྨ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The highest god in the form realm.</p>
                             </note>
                         </gloss>
@@ -27923,8 +27926,8 @@
                         <gloss type="person" xml:id="UT22084-092-001-6070">
                             <term type="translationMain">Gaṇeśvara</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">gaṇeśvara</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">tshogs kyi dbang phyug </term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཚོགས་ཀྱི་དབང་ཕྱུག །</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">tshogs kyi dbang phyug</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཚོགས་ཀྱི་དབང་ཕྱུག</term>
                             <note type="definition">
                                 <p>Another name of Gaṇeśa.</p>
                             </note>
@@ -29246,7 +29249,7 @@
                                         <item>
                         <gloss type="person" xml:id="UT22084-092-001-6302">
                             <term type="translationMain">Chödrak Pel Sangpo</term>
-                            <term type="translationAlternative">Pel Sangpo </term>
+                            <term type="translationAlternative">Pel Sangpo</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">chos grags dpal bzang po</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས་གྲགས་དཔལ་བཟང་པོ།</term>
