--- a/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -27,7 +27,7 @@
             <editor role="finalReviewer" xml:id="UT22084-096-054-1092">Nathaniel Rich</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 1.1.9 <date>2023</date>
+                <edition>v 1.1.10 <date>2023</date>
                 </edition>
             </editionStmt>
          <publicationStmt>
@@ -223,6 +223,9 @@
                 </change>
                 <change who="#celso" when="2023-09-10T18:38:35.679Z" type="text-version" status="1.1.9" xml:id="UT22084-096-054-1141">
                     <desc>Linked unlinked glossary term</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-09-21T12:19:31.851Z" type="text-version" status="1.1.10" xml:id="UT22084-096-054-1142">
+                    <desc>Updated incorrect Sanskrit glossary entry "god" to "deva"</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -5746,9 +5749,8 @@
                <item>
                         <gloss xml:id="UT22084-096-054-866" type="term" mode="match">
                             <term type="translationMain">deva</term>
-                            <term type="translationAlternative">deva</term>
-                            <term type="translationAlternative">god</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">god</term>
+                           <term type="translationAlternative">god</term>
+                           <term xml:lang="Sa-Ltn" type="sourceUnspecified">deva</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">lha</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ལྷ།</term>
                             <note type="definition" rend="override">
@@ -6903,7 +6905,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">brahmā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">tshangs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཚངས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>One of the primary deities of the Brahmanical pantheon,
                         Brahmā occupies an important place in Buddhism as one of two deities (the
                         other being Śakra) that are said to have first exhorted Śākyamuni to teach
