--- a/translations/kangyur/placeholders/080-011_toh427-the_tantra_of_rigyarali.xml
+++ b/translations/kangyur/placeholders/080-011_toh427-the_tantra_of_rigyarali.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">ri gi a ra li'i rgyud kyi rgyal po zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">rigyāralitantrarājanāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-080-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12132" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:33 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-080-011-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T10:09:02.073Z" type="translation-status" status="4" xml:id="UT22084-080-011-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T10:09:02.073Z" type="text-version" status="0.0.1" xml:id="UT22084-080-011-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
