--- a/translations/kangyur/placeholders/088-035_toh540,1078-the_incantation_of_surupa.xml
+++ b/translations/kangyur/placeholders/088-035_toh540,1078-the_incantation_of_surupa.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">su rU pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">surūpanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">su rU pa zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-088-035-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-035-1">Buddhapīṭha Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-088-035-2">Gergely Hidas</author>
                 <consultant role="projectManager" xml:id="UT22084-088-035-3">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-088-035-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-088-035-19">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2023</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-088-035"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +74,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-06T12:38:47.222Z" type="text-version" status="0.0.7" xml:id="UT22084-088-035-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T12:39:25.378Z" type="text-version" status="0.0.8" xml:id="UT22084-088-035-20">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T12:45:18.029Z" type="translation-status" status="2.f" xml:id="UT22084-088-035-21">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T12:45:18.029Z" type="text-version" status="0.0.9" xml:id="UT22084-088-035-22">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
