--- a/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">las sgrib thams cad rnam par sbyong ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarva­karmāvaraṇaviśodhanī­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa las kyi sgrib pa thams cad rnam par sbyong ba zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-094-020-1"/>
+                <author role="translatorMain" xml:id="UT22084-094-020-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-094-020-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-094-020-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-094-020-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-094-020-18">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-094-020"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +71,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-09-06T12:31:48.137Z" type="text-version" status="0.0.6" xml:id="UT22084-094-020-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-06T12:37:52.158Z" type="text-version" status="0.0.7" xml:id="UT22084-094-020-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T12:49:42.18Z" type="translation-status" status="2.f" xml:id="UT22084-094-020-20">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T12:49:42.18Z" type="text-version" status="0.0.8" xml:id="UT22084-094-020-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
