--- a/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
+++ b/translations/kangyur/placeholders/062-014_toh214-the_sutra_of_advice_for_the_king_1.xml
@@ -9,19 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">rājādeśanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
-                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <author role="translatorMain" xml:id="UT22084-062-014-1">Sakya Pandita Translation Group</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-062-014-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-062-014-3">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-062-014-4">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="projectManager" xml:id="UT22084-062-014-5">Rev. Dr. Ani Kunga Chodron</consultant>
+                <editor role="projectEditor" xml:id="UT22084-062-014-6">George FitzHerbert</editor>
+                <editor role="projectEditor" xml:id="UT22084-062-014-21">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-062-014"/>
                 <date/>
             </publicationStmt>
@@ -36,16 +38,42 @@
                     <idno source-id="O1JC114941JC11851" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-30T08:07:00.995Z" user="admin">30/01/2023 08:07:00</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:44:11.773Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:44:11.773Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-30T13:45:46.473Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-13T14:03:33.416Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-30T08:06:55.45Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-30T08:06:55.45Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-062-014-7">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-30T13:44:11.773Z" type="translation-status" status="2.h" xml:id="UT22084-062-014-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-30T13:44:11.773Z" type="text-version" status="0.0.2" xml:id="UT22084-062-014-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-30T13:45:46.473Z" type="text-version" status="0.0.3" xml:id="UT22084-062-014-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-13T14:03:33.416Z" type="text-version" status="0.0.4" xml:id="UT22084-062-014-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-30T08:06:55.45Z" type="translation-status" status="2.g" xml:id="UT22084-062-014-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-30T08:06:55.45Z" type="text-version" status="0.0.5" xml:id="UT22084-062-014-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-062-014-14">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T12:43:38.403Z" type="text-version" status="0.0.7" xml:id="UT22084-062-014-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:09:40.479Z" type="translation-status" status="2.f" xml:id="UT22084-062-014-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:09:40.479Z" type="text-version" status="0.0.8" xml:id="UT22084-062-014-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
