--- a/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/placeholders/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -9,19 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">rājādeśanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyal po la gdams pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <author role="translatorMain" xml:id="UT22084-062-015-1">Sakya Pandita Translation Group</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-062-015-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" xml:id="UT22084-062-015-3">Rev. Dr. Ani Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-062-015-4">Ven. Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-062-015-5">Rev. Dr. Ani Kunga Chodron</author>
+                <editor role="projectEditor" xml:id="UT22084-062-015-6">George FitzHerbert</editor>
+                <editor role="projectEditor" xml:id="UT22084-062-015-24">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-062-015"/>
                 <date/>
             </publicationStmt>
@@ -36,19 +38,51 @@
                     <idno source-id="O1JC114941JC11853" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-16T09:54:51.085Z" user="admin">16/01/2023 09:54:51</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-14T15:10:19.347Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-14T15:10:19.347Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-12-13T13:39:29.665Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-13T13:39:29.665Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-13T14:04:39.739Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-01-04T09:57:12.88Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-04T09:57:12.88Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-01-16T09:54:45.566Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-01-16T09:54:45.566Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-062-015-7">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-14T15:10:19.347Z" type="translation-status" status="2.h" xml:id="UT22084-062-015-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-14T15:10:19.347Z" type="text-version" status="0.0.2" xml:id="UT22084-062-015-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-13T13:39:29.665Z" type="translation-status" status="2.g" xml:id="UT22084-062-015-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-13T13:39:29.665Z" type="text-version" status="0.0.3" xml:id="UT22084-062-015-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-13T14:04:39.739Z" type="text-version" status="0.0.4" xml:id="UT22084-062-015-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-04T09:57:12.88Z" type="translation-status" status="2.h" xml:id="UT22084-062-015-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-04T09:57:12.88Z" type="text-version" status="0.0.5" xml:id="UT22084-062-015-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-16T09:54:45.566Z" type="translation-status" status="2.g" xml:id="UT22084-062-015-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-16T09:54:45.566Z" type="text-version" status="0.0.6" xml:id="UT22084-062-015-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-062-015-17">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-07T12:44:19.99Z" type="text-version" status="0.0.8" xml:id="UT22084-062-015-25">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:10:32.753Z" type="translation-status" status="2.f" xml:id="UT22084-062-015-26">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:10:32.753Z" type="text-version" status="0.0.9" xml:id="UT22084-062-015-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
