--- a/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
+++ b/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
@@ -9,19 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">grong khyer gyis 'tsho ba'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryanāgarāvalambikā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa grong khyer gyis 'tsho ba zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
-                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <author role="translatorMain" xml:id="UT22084-062-005-1">Sakya Pandita Translation Group</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-062-005-2">Khenpo Kalsang Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-062-005-3">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-062-005-4">Ani Kunga Chodron</author>
+                <consultant role="projectManager" xml:id="UT22084-062-005-5">Ani Kunga Chodron</consultant>
+                <editor role="projectEditor" xml:id="UT22084-062-005-6">George FitzHerbert</editor>
+                <editor role="projectEditor" xml:id="UT22084-062-005-20">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-062-005"/>
                 <date/>
             </publicationStmt>
@@ -36,15 +38,39 @@
                     <idno source-id="O1JC114941JC11837" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-30T12:47:33.651Z" user="admin">30/03/2023 12:47:33</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-14T15:14:32.649Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-14T15:14:32.649Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-02T13:41:31.882Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-30T12:47:29.351Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-30T12:47:29.351Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-062-005-7">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-14T15:14:32.649Z" type="translation-status" status="2.h" xml:id="UT22084-062-005-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-14T15:14:32.649Z" type="text-version" status="0.0.2" xml:id="UT22084-062-005-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-02T13:41:31.882Z" type="text-version" status="0.0.3" xml:id="UT22084-062-005-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-30T12:47:29.351Z" type="translation-status" status="2.g" xml:id="UT22084-062-005-11">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-30T12:47:29.351Z" type="text-version" status="0.0.4" xml:id="UT22084-062-005-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-062-005-13">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T08:37:45.853Z" type="text-version" status="0.0.6" xml:id="UT22084-062-005-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:18:14.289Z" type="translation-status" status="2.f" xml:id="UT22084-062-005-22">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:18:14.289Z" type="text-version" status="0.0.7" xml:id="UT22084-062-005-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
