--- a/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
+++ b/translations/kangyur/placeholders/055-002_toh128-the_illuminating_appearance_of_all_things_distinctly_without_their_departing_from_their_essential_nature_emptiness.xml
@@ -10,19 +10,21 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadharmatāsvabhāva­śūnyatācalapratisarvāloka­sūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos nyid rang gi ngo bo stong pa nyid las mi g.yo bar tha dad pa thams cad la snang ba'i mdo</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">chos nyid mi g.yo ba'i mdo</title>
-                <author role="translatorMain" ref="eft:team-27"/>
-                <consultant role="dharmaMaster" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
-                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <author role="translatorMain" xml:id="UT22084-055-002-1">Sakya Pandita Translation Group</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-055-002-2">Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" xml:id="UT22084-055-002-3">Ani Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-055-002-4">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-055-002-5">Ani Kunga Chodron</author>
+                <editor role="projectEditor" xml:id="UT22084-055-002-6">George FitzHerbert</editor>
+                <editor role="projectEditor" xml:id="UT22084-055-002-25">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2019</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-055-002"/>
                 <date/>
             </publicationStmt>
@@ -37,20 +39,54 @@
                     <idno source-id="O1JC114941JC11706" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-30T12:46:21.487Z" user="admin">30/03/2023 12:46:21</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-10-22T13:32:38.987Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-22T13:32:38.987Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-10-03T10:06:43.431Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-03T10:06:43.431Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-10-03T10:08:01.909Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-10-08T11:50:12.797Z" user="john">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T10:15:57.085Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-11-28T10:15:57.085Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-30T12:46:17.188Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-30T12:46:17.188Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-055-002-7">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-22T13:32:38.987Z" type="translation-status" status="2.h" xml:id="UT22084-055-002-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-22T13:32:38.987Z" type="text-version" status="0.0.2" xml:id="UT22084-055-002-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-03T10:06:43.431Z" type="translation-status" status="2.g" xml:id="UT22084-055-002-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-03T10:06:43.431Z" type="text-version" status="0.0.3" xml:id="UT22084-055-002-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-03T10:08:01.909Z" type="text-version" status="0.0.4" xml:id="UT22084-055-002-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2022-10-08T11:50:12.797Z" type="text-version" status="0.0.5" xml:id="UT22084-055-002-13">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-28T10:15:57.085Z" type="translation-status" status="2.h" xml:id="UT22084-055-002-14">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-11-28T10:15:57.085Z" type="text-version" status="0.0.6" xml:id="UT22084-055-002-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-30T12:46:17.188Z" type="translation-status" status="2.g" xml:id="UT22084-055-002-16">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-30T12:46:17.188Z" type="text-version" status="0.0.7" xml:id="UT22084-055-002-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-055-002-18">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T08:36:48.817Z" type="text-version" status="0.0.9" xml:id="UT22084-055-002-26">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:22:42.907Z" type="translation-status" status="2.f" xml:id="UT22084-055-002-27">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-25T13:22:42.907Z" type="text-version" status="0.0.10" xml:id="UT22084-055-002-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
